# invision-contacts-crm

./: .bandit  .coveragerc  .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup-hooks.sh  setup.cfg  update-after-push.sh
.github/workflows/: ci.yml
src/app/: settings.py  urls.py
src/contacts/: admin.py  api.py  models.py
src/contacts/migrations/: 0001_initial.py
src/tenants/: admin.py  middleware.py  models.py
src/tenants/management/commands/: create_tenant.py  delete_tenant.py  migrate_schema.py  migrate_tenant_schema.py  setup_environment.py
src/tenants/migrations/: 0001_initial.py  0002_domain_folder_domain_is_primary_and_more.py  0002_domain_is_primary_alter_domain_tenant.py  0003_domain_folder.py  0004_tenant_auto_drop_schema.py
src/tests/: README.md  api_permissions_test.py  commands_test.py  conftest.py  contacts_test.py  tenant_isolation_test.py  tenant_middleware_test.py
