[project]
name = "invision-contacts-crm"
version = "0.1.0"
description = "Contacts service for SaaS-CRM with schema-based multi-tenancy"
readme = "README.md"
authors = [
    {name = "jojoprison",email = "egyabig2@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "Django>=5.2.3",
    "django-ninja>=1.4.3",
    "psycopg2-binary>=2.9.10",
    "django-pgschemas>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-django>=4.7.2",
    "pytest-cov>=6.2.1",
    "flake8>=7.3.0",
    # TODO after implementation move to main deps
    "bandit>=1.8.4",
    # TODO after implementation move to main deps
    "celery>=5.3.0",
    # TODO after implementation move to main deps
    "redis>=6.2.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
